# fakturoid

./: Cargo.toml
src/: client.rs  error.rs  filters.rs  lib.rs  models.rs
