[package]
name = "fakturoid"
version = "0.1.4"
authors = ["Josef Rokos <pepa@bukova.info>"]
edition = "2018"
description = "Client library for fakturoid.cz"
readme = "README.md"
repository = "https://github.com/PepaRokos/fakturoid"
license-file = "LICENSE"
keywords = ["fakturoid", "API_client"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
chrono = { version = "0.4.31", features = ["serde"] }
reqwest = { version = "0.11.22", features = ["json"] }
rust_decimal = { version = "1.33.1", features = ["serde"] }
tree_magic = "0.2.3"
base64 = "0.21.5"
tracing = "0.1.37"

[dev-dependencies]
tokio = {version = "1.35.0", features = ["full"]}
